  compact String representation without blanks. (LDAP-91)

* Improved search methods that take handlers so that they will work
  with handlers that use ContextMappers, eg ContextMapperCallbackHandler.
  (LDAP-107)

* Fixed a problem where the narrowest possible exception subclass was
  not always found in the exception translation. (LDAP-100)

* Upgraded Acegi to 1.0.6.

* Upgraded commons-lang to 2.3.

Changes in version 1.2.1 (Dec 2007)
-------------------------------------------
* Added pooling library which features flexible connection validation
  and better configuration than the built-in pooling. (LDAP-85)

* Fixed a problem in AbstractContextSource which led to an unnecessary
  reference to the LDAP Booster Pack (ldapbp). (LDAP-88, LDAP-89)

* Added missing package description and updated copyright. (LDAP-92)

* Added build instructions. (LDAP-27)

* Fixed bug in SimpleLdapTemplate where the wrong target method was being
  called. (LDAP-93)

* Made createContext in AbstractContextSource protected rather than
  package private. (LDAP-94)

Changes in version 1.2 (Oct 2007)
-------------------------------------------
A number of API-breaking changes have been made in the 1.2 release compared to version 1.1.2.
Consequently this is NOT a drop-in replacement for Spring LDAP 1.1.2,
though upgrading should not present all that much work. Please see
the supplied upgrade guide for details.

* Added getContextSource on LdapTemplate.

* The following getters on AbstractContextSource have been added:
    getContextFactory
    getDirObjectFactory
    getAuthenticationSource
    getUrls (was protected)
    isPooled
    isAnonymousReadOnly

* Upgraded to Spring 2.0.6 internally. Spring 1.2.x is still supported.

* Reviewed all javadoc.

* Revised reference manual.

* AbstractConnection source now actively removes pooling flag from context environment
  if pooling is set to 'false'. (LDAP-83)

* AcegiAuthenticationSource now supports anonymous authentication. (LDAP-67)
