@@ -23,6 +23,9 @@ Changes in version 1.2.2 (XXX 2008)
 * Fixed a problem where the narrowest possible exception subclass was
   not always found in the exception translation. (LDAP-100)
 
+* Made changes required for paged results to work when using Spring LDAP
+  connection pool with a single connection. (LDAP-114)
+
 * Upgraded Acegi to 1.0.6.
 
 * Upgraded commons-lang to 2.3.
